demos/multi-cluster/manifests/envoy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: mariadb-eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: mariadb-proxy-config
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mariadb-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: mariadb-eg
  listeners:
    - name: mariadb
      protocol: TLS
      port: 3306
      tls:
        mode: Passthrough
      allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: TLSRoute
