demos/multi-cluster/manifests/envoy/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mariadb
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: mariadb-gateway
      sectionName: mariadb
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: eu-south
          weight: 100
        - group: gateway.envoyproxy.io
          kind: Backend
          name: eu-central
          weight: 0
