demos/multi-cluster/manifests/envoy/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: mariadb
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: mariadb-gateway
      sectionName: mariadb
  hostnames:
    - app.mariadb.com
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: eu-south
          weight: 100
        - group: gateway.envoyproxy.io
          kind: Backend
          name: eu-central
          weight: 0
